<resources>
    <string name="app_name">Timer</string>
    <string name="hint">Input Number (seconds)</string>
    <string name="_00_00">00:00</string>
    <string name="timer_app">Timer App</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="hook">let\'s count it down!</string>
    <string name="ringggg">Ringggg!</string>
    <string name="seconds_remaining">"seconds remaining: "</string>
</resources>